--- a/Dynamo.ORM/Dynamo.ORM.csproj
+++ b/Dynamo.ORM/Dynamo.ORM.csproj
@@ -10,12 +10,22 @@
     <RepositoryType>Git</RepositoryType>
     <RepositoryUrl>https://github.com/marcodafonseca/Dynamo.ORM.git</RepositoryUrl>
     <PackageTags>AWS DynamoDb, async DynamoDb, async AWS DynamoDb, AWS DynamoDb .Net Core</PackageTags>
-    <PackageReleaseNotes>This is still in alpha</PackageReleaseNotes>
-    <AssemblyVersion>0.0.2.0</AssemblyVersion>
-    <FileVersion>0.0.2.0</FileVersion>
+    <PackageReleaseNotes>This is still in alpha
+
+-- Release Notes --
+
+v.0.0.3.0
+
+Changed Add, Update and Delete functions to be run asynchronously as Tasks
+Added "null" support for expressions
+Updated repository tests
+Updated NuGet packages
+Added simple benchmarking application (Dynamo.ORM.Benchmarks)</PackageReleaseNotes>
+    <AssemblyVersion>0.0.3.0</AssemblyVersion>
+    <FileVersion>0.0.3.0</FileVersion>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <PackageId>Dynamo.ORM</PackageId>
-    <Version>0.0.2.0</Version>
+    <Version>0.0.3.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
