--- a/Dynamo.ORM/Dynamo.ORM.csproj
+++ b/Dynamo.ORM/Dynamo.ORM.csproj
@@ -10,21 +10,20 @@
     <RepositoryType>Git</RepositoryType>
     <RepositoryUrl>https://github.com/marcodafonseca/Dynamo.ORM.git</RepositoryUrl>
     <PackageTags>async AWS DynamoDb ORM .Net-Core .Net-Standard</PackageTags>
-    <PackageReleaseNotes>This is still in alpha
+    <PackageReleaseNotes>This is still in beta
 
 Please don't hesitate to log issues or requests on GitHub.
 We are working everyday to make this more and more robust to ensure it will help more developers.
 
 -- Release Notes --
-Resolved Issue #1 "Can't call inline functions in expressions" - https://github.com/marcodafonseca/Dynamo.ORM/issues/1
-Resolved Issue #2 "Can't query database with particular types" - https://github.com/marcodafonseca/Dynamo.ORM/issues/2
+- Added ability to read and write mapped property fields
 
 Full history of release notes can be found on the GitHub page</PackageReleaseNotes>
-    <AssemblyVersion>0.1.0.0</AssemblyVersion>
-    <FileVersion>0.1.0.0</FileVersion>
+    <AssemblyVersion>0.1.1.0</AssemblyVersion>
+    <FileVersion>0.1.1.0</FileVersion>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <PackageId>Dynamo.ORM</PackageId>
-    <Version>0.1.0.0</Version>
+    <Version>0.1.1.0</Version>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Copyright>Dev200 Pty. LTD</Copyright>
     <PackageIconUrl>https://dev200.co.za/images/logo.png</PackageIconUrl>
