--- a/Dynamo.ORM/Dynamo.ORM.csproj
+++ b/Dynamo.ORM/Dynamo.ORM.csproj
@@ -10,27 +10,25 @@
     <RepositoryType>Git</RepositoryType>
     <RepositoryUrl>https://github.com/marcodafonseca/Dynamo.ORM.git</RepositoryUrl>
     <PackageTags>async AWS DynamoDb ORM .Net-Core .Net-Standard</PackageTags>
-    <PackageReleaseNotes>This is still in beta
-
-Please don't hesitate to log issues or requests on GitHub.
+    <PackageReleaseNotes>Please don't hesitate to log issues or requests on GitHub.
 We are working everyday to make this more and more robust to ensure it will help more developers.
 
 -- Release Notes --
-- Added ability to read and write mapped property fields
+- Added Guid support
 
 Full history of release notes can be found on the GitHub page</PackageReleaseNotes>
-    <AssemblyVersion>0.1.1.0</AssemblyVersion>
-    <FileVersion>0.1.1.0</FileVersion>
+    <AssemblyVersion>0.1.2.0</AssemblyVersion>
+    <FileVersion>0.1.2.0</FileVersion>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <PackageId>Dynamo.ORM</PackageId>
-    <Version>0.1.1.0</Version>
+    <Version>0.1.2.0</Version>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Copyright>Dev200 Pty. LTD</Copyright>
     <PackageIconUrl>https://dev200.co.za/images/logo.png</PackageIconUrl>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.3.15.3" />
+    <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.3.17.1" />
   </ItemGroup>
 
 </Project>
