--- a/Dynamo.ORM/Dynamo.ORM.csproj
+++ b/Dynamo.ORM/Dynamo.ORM.csproj
@@ -14,14 +14,14 @@
 We are working everyday to make this more and more robust to ensure it will help more developers.
 
 -- Release Notes --
-- Added support for null/empty strings
+- Added support for arrays and IEnumerabls
 
 Full history of release notes can be found on the GitHub page</PackageReleaseNotes>
-    <AssemblyVersion>0.1.4.3</AssemblyVersion>
-    <FileVersion>0.1.4.3</FileVersion>
+    <AssemblyVersion>0.1.4.4</AssemblyVersion>
+    <FileVersion>0.1.4.4</FileVersion>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <PackageId>Dynamo.ORM</PackageId>
-    <Version>0.1.4.3</Version>
+    <Version>0.1.4.4</Version>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Copyright>Dev200 Pty. LTD</Copyright>
     <PackageIconUrl>https://dev200.co.za/images/logo.png</PackageIconUrl>
