--- a/Dynamo.ORM/Dynamo.ORM.csproj
+++ b/Dynamo.ORM/Dynamo.ORM.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -10,25 +10,26 @@
     <RepositoryType>Git</RepositoryType>
     <RepositoryUrl>https://github.com/marcodafonseca/Dynamo.ORM.git</RepositoryUrl>
     <PackageTags>async AWS DynamoDb ORM .Net-Core .Net-Standard</PackageTags>
-    <PackageReleaseNotes>Please don't hesitate to log issues or requests on GitHub.
-We are working everyday to make this more and more robust to ensure it will help more developers.
+    <PackageReleaseNotes>
+      Please don't hesitate to log issues or requests on GitHub.
+      We are working everyday to make this more and more robust to ensure it will help more developers.
 
--- Release Notes --
-- Added support for arrays and IEnumerabls
+      -- Release Notes --
+      - Changed AWSSDK.DynamoDBv2 version reference to 3.*
 
-Full history of release notes can be found on the GitHub page</PackageReleaseNotes>
-    <AssemblyVersion>0.1.4.5</AssemblyVersion>
-    <FileVersion>0.1.4.5</FileVersion>
+      Full history of release notes can be found on the GitHub page
+    </PackageReleaseNotes>
+    <AssemblyVersion>0.1.4.6</AssemblyVersion>
+    <FileVersion>0.1.4.6</FileVersion>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <PackageId>Dynamo.ORM</PackageId>
-    <Version>0.1.4.5</Version>
+    <Version>0.1.4.6</Version>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Copyright>Dev200 Pty. LTD</Copyright>
     <PackageIconUrl>https://dev200.co.za/images/logo.png</PackageIconUrl>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.5.4.26" />
+    <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.*" />
   </ItemGroup>
-
 </Project>
