--- a/Dynamo.ORM.Benchmarks/Dynamo.ORM.Benchmarks.csproj
+++ b/Dynamo.ORM.Benchmarks/Dynamo.ORM.Benchmarks.csproj
@@ -2,15 +2,17 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Dynamo.ORM\Dynamo.ORM.csproj" />
+    <Compile Remove="Output\**" />
+    <EmbeddedResource Remove="Output\**" />
+    <None Remove="Output\**" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Output\" />
+    <ProjectReference Include="..\Dynamo.ORM\Dynamo.ORM.csproj" />
   </ItemGroup>
 
   <ItemGroup>
