--- a/Dynamo.ORM/Dynamo.ORM.csproj
+++ b/Dynamo.ORM/Dynamo.ORM.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netstandard2.1</TargetFramework>
     <Authors>Dev200</Authors>
     <Company>Dev200</Company>
     <PackageLicenseUrl>https://github.com/marcodafonseca/Dynamo.ORM/blob/master/LICENSE</PackageLicenseUrl>
@@ -15,15 +15,15 @@
       We are working everyday to make this more and more robust to ensure it will help more developers.
 
       -- Release Notes --
-      - Changed AWSSDK.DynamoDBv2 version reference to 3.*
+      - Added support for IDictionary
 
       Full history of release notes can be found on the GitHub page
     </PackageReleaseNotes>
-    <AssemblyVersion>0.1.4.6</AssemblyVersion>
-    <FileVersion>0.1.4.6</FileVersion>
+    <AssemblyVersion>0.2.0</AssemblyVersion>
+    <FileVersion>0.2.0</FileVersion>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <PackageId>Dynamo.ORM</PackageId>
-    <Version>0.1.4.6</Version>
+    <Version>0.2.0</Version>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Copyright>Dev200 Pty. LTD</Copyright>
     <PackageIconUrl>https://dev200.co.za/images/logo.png</PackageIconUrl>
