--- a/Dynamo.ORM.Benchmarks/Dynamo.ORM.Benchmarks.csproj
+++ b/Dynamo.ORM.Benchmarks/Dynamo.ORM.Benchmarks.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="CsvHelper" Version="28.0.1" />
+    <PackageReference Include="CsvHelper" Version="29.0.0" />
   </ItemGroup>
 
 </Project>
