--- a/Dynamo.ORM/Dynamo.ORM.csproj
+++ b/Dynamo.ORM/Dynamo.ORM.csproj
@@ -12,22 +12,27 @@
     <PackageTags>async AWS DynamoDb ORM .Net-Core .Net-Standard</PackageTags>
     <PackageReleaseNotes>
       Please don't hesitate to log issues or requests on GitHub.
-      We are working everyday to make this more and more robust to ensure it will help more developers.
+      We are working to make this more robust and feature rich to ensure it will help more developers.
 
       -- Release Notes --
-      - Added support for IDictionary
+      - Ensured support for v6.0
 
       Full history of release notes can be found on the GitHub page
     </PackageReleaseNotes>
-    <AssemblyVersion>0.2.0</AssemblyVersion>
-    <FileVersion>0.2.0</FileVersion>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <AssemblyVersion>0.2.1</AssemblyVersion>
+    <FileVersion>0.2.1</FileVersion>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <PackageId>Dynamo.ORM</PackageId>
-    <Version>0.2.0</Version>
+    <Version>0.2.1</Version>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Copyright>Dev200 Pty. LTD</Copyright>
-    <PackageIconUrl>https://dev200.co.za/images/logo.png</PackageIconUrl>
+    <PackageIconUrl>https://dev200.co.za/img/logo.png</PackageIconUrl>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\README.md" Pack="true" PackagePath="\" Link="README.md" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.*" />
