--- a/Dynamo.ORM.UnitTests/Dynamo.ORM.UnitTests.csproj
+++ b/Dynamo.ORM.UnitTests/Dynamo.ORM.UnitTests.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AWSSDK.SecurityToken" Version="3.7.300.118" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.10.0" />
     <PackageReference Include="System.Runtime" Version="4.3.1" />
     <PackageReference Include="xunit" Version="2.9.0" />
