--- a/Dynamo.ORM/Dynamo.ORM.csproj
+++ b/Dynamo.ORM/Dynamo.ORM.csproj
@@ -15,15 +15,19 @@
       We are working to make this more robust and feature rich to ensure it will help more developers.
 
       -- Release Notes --
-      - Implemented fix for handling of nullable IDictionary
+
+      -   ! Breaking Changes ! - Changed return type of List function from List to IList
+      -   Added pagination parameters to existing List method
+      -   Added custom exception for paging, PageNotFoundException
+      -   Added method for retrieving approximate item count for a table.
 
       Full history of release notes can be found on the GitHub page
     </PackageReleaseNotes>
     <PackageReadmeFile>README.md</PackageReadmeFile>
-    <AssemblyVersion>0.3.3</AssemblyVersion>
-    <FileVersion>0.3.3</FileVersion>
+    <AssemblyVersion>0.4.0</AssemblyVersion>
+    <FileVersion>0.4.0</FileVersion>
     <PackageId>Dynamo.ORM</PackageId>
-    <Version>0.3.3</Version>
+    <Version>0.4.0</Version>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Copyright>Dev200 Pty. LTD</Copyright>
     <PackageIcon>logo.png</PackageIcon>
