Altered markup for breaking changes

--- a/Dynamo.ORM/Dynamo.ORM.csproj
+++ b/Dynamo.ORM/Dynamo.ORM.csproj
@@ -16,7 +16,7 @@
 
       -- Release Notes --
 
-      -   ! Breaking Changes ! - Changed return type of List function from List to IList
+      -   **! Breaking Changes !** - Changed return type of List function from List to IList
       -   Added pagination parameters to existing List method
       -   Added custom exception for paging, PageNotFoundException
       -   Added method for retrieving approximate item count for a table.
