--- a/Dynamo.ORM/Dynamo.ORM.csproj
+++ b/Dynamo.ORM/Dynamo.ORM.csproj
@@ -16,17 +16,15 @@
 
       -- Release Notes --
 
-      - Documented the Repository class and interface
-      - Upgraded dependencies and fixed code to work with newer dependencies
-      - Fixed typo in README
+      - Ensuring that minimum version of AWSSDK.DynamoDBv2 will be 4.0.10.6
 
       Full history of release notes can be found on the GitHub page
     </PackageReleaseNotes>
     <PackageReadmeFile>README.md</PackageReadmeFile>
-    <AssemblyVersion>0.5.0</AssemblyVersion>
-    <FileVersion>0.5.0</FileVersion>
+    <AssemblyVersion>0.5.1</AssemblyVersion>
+    <FileVersion>0.5.1</FileVersion>
     <PackageId>Dynamo.ORM</PackageId>
-    <Version>0.5.0</Version>
+    <Version>0.5.1</Version>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Copyright>Dev200 Pty. LTD</Copyright>
     <PackageIcon>logo.png</PackageIcon>
@@ -48,6 +46,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="AWSSDK.DynamoDBv2" Version="4.*" />
+    <PackageReference Include="AWSSDK.DynamoDBv2" Version="[4.0.10.6,)" />
   </ItemGroup>
 </Project>
